--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
 </head>
 <body>
 
+  <header>
+    <h1>枯山水</h1>
+    <p>Rock Gardens</p>
+    <nav>
+      <ul>
+        <li>Viewing</li>
+        <li>Gravel</li>
+        <li>Symbolism</li>
+      </ul>
+    </nav>
+  </header>
 
+  <div class="jabanis">
+  <i>自然の親密な本質を模倣し、人生の真の意味を発見する。</i>
+  <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
+  </div>
+  <main>
 
+  </main>
+
+  <footer>© 794 Heian Period</footer>
 </body>
 </html>
