--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <p>Rock Gardens</p>
     <nav>
       <ul>
-        <li>Viewing</li>
-        <li>Gravel</li>
-        <li>Symbolism</li>
+        <li><a href="#">Viewing<</a>/li>
+        <li><a href="#">Gravel</a></li>
+        <li><a href="#">Symbolism</a></li>
       </ul>
     </nav>
   </header>
