--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
     <p>Rock Gardens</p>
     <nav>
       <ul>
-        <li><a href="#">Viewing<</a>/li>
+        <li><a href="#">Viewing</a></li>
         <li><a href="#">Gravel</a></li>
         <li><a href="#">Symbolism</a></li>
       </ul>
     </nav>
   </header>
-
+  <section>
+  <img src="images/Viewing.svg" alt="">
   <div class="jabanis">
   <i>自然の親密な本質を模倣し、人生の真の意味を発見する。</i>
   <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
   </div>
+  </section>
   <main>
 
   </main>
