--- a/index.html
+++ b/index.html
@@ -21,14 +21,38 @@
     </nav>
   </header>
   <section>
-  <img src="images/Viewing.svg" alt="">
+  <img src="images/banner.svg" alt="">
   <div class="jabanis">
-  <i>自然の親密な本質を模倣し、人生の真の意味を発見する。</i>
-  <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
+  <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
+  <p><strong>Imitate the intimate essence of nature & discover the true meaning of life.</strong></p>
   </div>
   </section>
   <main>
+    <section>
 
+
+
+
+    </section>
+    <figure>
+      <img src="images/veiwing" alt="">
+      <h2>閲覧</h2>
+      <p><strong>Viewing</strong></p>
+    <figcaption>Imitate the intimate essence of nature & discover the true meaning of life.</figcaption>
+    <a href="#">Learn more about Viewing</a>
+    </figure>
+    <figure>
+      <img src="images/veiwing" alt="">
+    <figcaption>砂利</figcaption>
+    <figcaption>Imitate the intimate essence of nature & discover the true meaning of life.</figcaption>
+      <a href="#">Learn more about Gravel</a>
+    </figure>
+    <figure>
+      <img src="images/veiwing" alt="">
+      <figcaption>閲覧</figcaption>
+    <figcaption>Imitate the intimate essence of nature & discover the true meaning of life.</figcaption>
+    <a href="#">Learn more about Symbolism</a>
+    </figure>
   </main>
 
   <footer>© 794 Heian Period</footer>
