--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
   <header>
     <h1>枯山水</h1>
     <p>Rock Gardens</p>
@@ -20,8 +19,13 @@
       </ul>
     </nav>
   </header>
+
+<main>
+
+</main>
   <section>
-  <img src="images/banner.svg" alt="">
+  <img src="images/banner.svg" alt="Rock garden">
+
   <div class="jabanis">
   <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
   <p><strong>Imitate the intimate essence of nature & discover the true meaning of life.</strong></p>
