--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header role="banner">
     <h1>枯山水</h1>
     <p>Rock Gardens</p>
     <nav>
@@ -21,42 +21,34 @@
   </header>
 
 <main>
-
-</main>
-  <section>
   <img src="images/banner.svg" alt="Rock garden">
-
-  <div class="jabanis">
-  <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
-  <p><strong>Imitate the intimate essence of nature & discover the true meaning of life.</strong></p>
+  <div class="">
+    <i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i>
+    <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
   </div>
-  </section>
-  <main>
-    <section>
 
-
-
-
-    </section>
-    <figure>
+  <section>
+    <article>
       <img src="images/veiwing" alt="">
-      <h2>閲覧</h2>
-      <p><strong>Viewing</strong></p>
-    <figcaption>Imitate the intimate essence of nature & discover the true meaning of life.</figcaption>
-    <a href="#">Learn more about Viewing</a>
-    </figure>
-    <figure>
-      <img src="images/veiwing" alt="">
-    <figcaption>砂利</figcaption>
-    <figcaption>Imitate the intimate essence of nature & discover the true meaning of life.</figcaption>
+      <h2> id="Veiwing"><i lang="ja">閲覧></i> <span>Vewing</span></h2>
+      <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
+      <a href="#">Learn more about Viewing</a>
+    </article>
+
+    <article>
+      <img src="images/gravel.svg" alt="">
+      <h2> id="Gravel"><i lang="ja">砂利></i> <span>Gravel</span></h2>
+      <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
       <a href="#">Learn more about Gravel</a>
-    </figure>
-    <figure>
-      <img src="images/veiwing" alt="">
-      <figcaption>閲覧</figcaption>
-    <figcaption>Imitate the intimate essence of nature & discover the true meaning of life.</figcaption>
-    <a href="#">Learn more about Symbolism</a>
-    </figure>
+    </article>
+
+    <article>
+      <img src="images/symbolism.svg" alt="">
+      <h2> id="Symbolism"><i lang="ja">象徴主義></i> <span>Symbolism</span></h2>
+      <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+      <a href="#">Learn more about Symbolism</a>
+    </article>
+  </section>
   </main>
 
   <footer>© 794 Heian Period</footer>
