--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header role="banner">
     <h1>枯山水</h1>
     <p>Rock Gardens</p>
-    <nav>
+    <nav role="navigation">
       <ul>
         <li><a href="#">Viewing</a></li>
         <li><a href="#">Gravel</a></li>
@@ -20,9 +20,9 @@
     </nav>
   </header>
 
-<main>
+<main role="main">
   <img src="images/banner.svg" alt="Rock garden">
-  <div class="">
+  <div>
     <i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i>
     <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
   </div>
@@ -30,27 +30,27 @@
   <section>
     <article>
       <img src="images/veiwing" alt="">
-      <h2> id="Veiwing"><i lang="ja">閲覧></i> <span>Vewing</span></h2>
+      <h2 id="seiwing"><i lang="ja">閲覧</i> <span>Vewing</span></h2>
       <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
       <a href="#">Learn more about Viewing</a>
     </article>
 
     <article>
       <img src="images/gravel.svg" alt="">
-      <h2> id="Gravel"><i lang="ja">砂利></i> <span>Gravel</span></h2>
+      <h2 id="gravel"><i lang="ja">砂利</i> <span>Gravel</span></h2>
       <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
       <a href="#">Learn more about Gravel</a>
     </article>
 
     <article>
       <img src="images/symbolism.svg" alt="">
-      <h2> id="Symbolism"><i lang="ja">象徴主義></i> <span>Symbolism</span></h2>
+      <h2 id="symbolism"><i lang="ja">象徴主義</i> <span>Symbolism</span></h2>
       <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
       <a href="#">Learn more about Symbolism</a>
     </article>
   </section>
   </main>
 
-  <footer>© 794 Heian Period</footer>
+  <footer role="contentinfo">© 794 Heian Period</footer>
 </body>
 </html>
