--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
   </header>
   <main role="main">
     <img src="images/banner.svg" alt="Rock garden">
+
     <div class="intro">
       <i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i>
       <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
     </div>
     <section>
       <article>
-        <img src="images/veiwing.svg" alt="">
-        <h2 id="seiwing"><i lang="ja">閲覧</i> <span>Vewing</span></h2>
+        <img src="images/viewing.svg" alt="">
+        <h2 id="viewing"><i lang="ja">閲覧</i> <span>Viewing</span></h2>
         <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
         <a href="#">Learn more about Viewing</a>
       </article>
