--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
   <header role="banner">
-    <h1>枯山水</h1>
-    <p>Rock Gardens</p>
+    <h1><i lang="ja">枯山水</i> <span>Rock Gardens</span></h1>
     <nav role="navigation">
       <ul>
         <li><a href="#">Viewing</a></li>
